[package]
name = "ttswd"
version = "0.0.2"
description = "Download games from the Steam Workshop for the game Tabletop Simulator."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
ureq = "2.7.1"
scraper = "0.17.1"
regex = "1.8.4"
dirs = "5.0.1"
lazy_static = "1.4.0"
base64 = "0.21.2"

tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "ttswd-cli"
path = "src/bin/cli.rs"
